pkl-core/src/test/files/LanguageSnippetTests/input/errors/missingLocalPropertyValue2.pkl
amends "baseModule.pkl"

local x: Int
